add Fullweb Preview

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -362,7 +362,7 @@ li {
 
 .plan {
   margin-top: -120px;
-  padding: 0px 0px 100px 0px;
+  padding: 0px;
   background-color: #2a2f34;
 }
 .plan .title {
